# gaianet-node

./: .actrc  .env  .env.example  .gitignore  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README-ar.md  README-cn.md  README-fa.md  README-id.md  README-ja.md  README-kr.md  README-pt.md  README-ru.md  README-tr.md  README-yr.md  README-zhcn.md  README-zhtw.md  README.md  README.tr.md  SECURITY.md  config.json  frpc.toml  gaianet  install-gaia.sh  install.ps1  install.sh  install_v2.sh  shellcheck.txt  start.sh  stop.sh  uninstall.sh  vector.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  release.yml  runNode.yml  runNode_v2.yml  test.yml  zipDaseboard.yml  zipDashboard.yml
dashboard/: 404.html  index.html
dashboard/chatbot-ui/: 404.html  chatbot-ui.html  index.html
dashboard/chatbot-ui/chatbot-ui/: index.html
dashboard/js/: abi.json  config.js  connect.js  interact.js  main.js
dashboard/locales/ar/: chat.json  sidebar.json
dashboard/locales/bn/: chat.json  sidebar.json
demo/: RAG.md  README.md  config.json  config.sh  frpc.toml  init.sh  install.txt  start.sh  stop.sh
docker/: Dockerfile  Dockerfile.cuda11  Dockerfile.cuda12  README.md  run.sh
tests/: chat.hurl  embeddings.hurl  rag.hurl  test.rag.json
utils/: Cargo.toml  README.md
utils/registry/: .gitignore  Cargo.toml  README.md
utils/registry/src/: abi.json  main.rs
utils/registry/src/ether_lib/: mod.rs
utils/src/: main.rs
v2/: README.md  gaianet  gaianet.sh  install.sh  install_v2.sh
(+146 files in other folders)
